--- a/plass-ide-frontend/src/app/problemConsole/problem-console.component.scss
+++ b/plass-ide-frontend/src/app/problemConsole/problem-console.component.scss
@@ -112,3 +112,14 @@
     }
   }
 }
+
+td,th,table{
+  border: #303030 1px solid;
+  text-align: center;
+}
+th{
+  background-color: antiquewhite;
+}
+table{
+  width: 400px;
+}
